# Bash-Checkstyle

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg  setup.py
src/: __main__.py  arg_parser.py  detect_functions_in_file.py  helper_dir_edit.py  helper_file_edit.py  helper_text_parsing.py  rules.py
src/bash-checkstyle/: __init__.py  __main__.py  arg_parser.py  detect_functions_in_file.py  helper_dir_edit.py  helper_file_edit.py  helper_text_parsing.py  rules.py
test/: conftest.py  test_function_detection.py  test_helper_text_parsing.py
test/example_files/: 2_functions.sh
